Fix spacing betwween social icons

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -170,8 +170,12 @@
   padding: 0;
   margin: 0;
 
+  display: flex;
+  flex-wrap: wrap;
+
   a {
     margin-right: 40px;
+    margin-bottom: 32px;
 
     svg {
       width: 24px;
